Added default projects to Seed() in Migrations/Configuration

--- a/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model DevPath.Models.ExternalLoginListViewModel
+﻿@model DevPath.ViewModels.Account.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
