--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -9,18 +9,22 @@
 
 <p>@Html.ActionLink("New Project", "New", "Projects", new { @class = "btn btn-primary" })</p>
 
-<ul style="padding:0; list-style-type:none;" >
+<ul style="padding:0; list-style-type:none;">
     @foreach (DevPath.Models.Project project in @Model)
     {
         <li>
-            <dev>
-                <p>
+            <div>
+                <a href=@($"/Projects/Details/{project.Id}")>
                     @project.Title - @project.Id
-                </p>
-                <p>
-                    @project.Description
-                </p>
-            </dev>
+                </a>
+                <div style="display:flex; justify-content:space-between;">
+                    <p>
+                        @project.Description
+                    </p>
+                    <p>@Html.ActionLink("Delete Project", "Delete", "Projects", new { id = project.Id }, new { @class = "btn btn-danger", @style = "margin-left:20px"})</p>
+                </div>
+
+            </div>
         </li>
     }
 </ul>
