--- a/Views/Projects/ProjectForm.cshtml
+++ b/Views/Projects/ProjectForm.cshtml
@@ -29,6 +29,6 @@
     </div>
     @Html.HiddenFor(m => m.Id)
     @Html.HiddenFor(p => p.Added)
-    <button class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">Save</button>
 }
 
