Added view Skills/Details

--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -7,3 +7,4 @@
 <p>Id: @Model.Id</p>
 <p>@Model.Description</p>
 
+<a href="~/Controllers/ProjectsController.cs">~/Controllers/ProjectsController.cs</a>
