Corrected ProjectFormViewModel and ProjectForm Added property to DateAdded

--- a/Views/Projects/ProjectForm.cshtml
+++ b/Views/Projects/ProjectForm.cshtml
@@ -28,7 +28,7 @@
         @Html.TextBoxFor(p => p.DeploymentUrl, new { @class = "form-control" })
     </div>
     @Html.HiddenFor(m => m.Id)
-    @Html.HiddenFor(p => p.Added)
+    @Html.HiddenFor(p => p.DateAdded)
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
