--- a/Views/Projects/ProjectForm.cshtml
+++ b/Views/Projects/ProjectForm.cshtml
@@ -15,6 +15,7 @@
         @Html.LabelFor(p => p.Description)
         @Html.TextAreaFor(p => p.Description, new { @class = "form-control" })
     </div>
+    <img src="@Url.Content(Model.Icon)" alt=@($"{Model.Title} Icon") class="rounded-circle mb-3" style="width: 150px; height: 150px; margin: 0 auto; object-fit: cover;" />
     <div class="mb-3">
         @Html.LabelFor(p => p.Icon)
         @Html.TextBoxFor(p => p.Icon, new { @class = "form-control" })
@@ -29,6 +30,6 @@
     </div>
     @Html.HiddenFor(m => m.Id)
     @Html.HiddenFor(p => p.DateAdded)
-    <button type="submit" class="btn btn-primary btn-block">Save</button>
+    <button type="submit" class="btn btn-primary">Save</button>
 }
 
