--- a/Views/Skills/SkillForm.cshtml
+++ b/Views/Skills/SkillForm.cshtml
@@ -7,31 +7,31 @@
 
 @using (Html.BeginForm("Save", "Skills"))
 {
-    <div class="form-group">
+    <div class="mb-3">
         @Html.LabelFor(s => s.Title)
         @Html.TextBoxFor(s => s.Title, new { @class = "form-control" })
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         @Html.LabelFor(s => s.Icon)
         @Html.TextBoxFor(s => s.Icon, new { @class = "form-control" })
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         @Html.LabelFor(s => s.Description)
         @Html.TextBoxFor(s => s.Description, new { @class = "form-control" })
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         @Html.LabelFor(s => s.Developer)
         @Html.TextBoxFor(s => s.Developer, new { @class = "form-control" })
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         @Html.LabelFor(s => s.ReleaseDate)
         @Html.TextBoxFor(s => s.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         @Html.LabelFor(s => s.RepositoryUrl)
         @Html.TextBoxFor(s => s.RepositoryUrl, new { @class = "form-control" })
     </div>
-    <div class="form-group">
+    <div class="mb-3">
         @Html.LabelFor(s => s.DocumentationUrl)
         @Html.TextBoxFor(s => s.DocumentationUrl, new { @class = "form-control" })
     </div>
