--- a/Views/Projects/List.cshtml
+++ b/Views/Projects/List.cshtml
@@ -17,6 +17,7 @@
             <tr>
                 <th>Project</th>
                 <th>Description</th>
+                <th>Skills</th>
                 <th class="d-none d-lg-table-cell" style="width:150px;">Repo</th>
                 <th class="d-none d-lg-table-cell" style="width:150px;">Deployment</th>
                 <th class="d-none d-lg-table-cell">Date Added</th>
@@ -39,7 +40,18 @@
                             </a>
                         }
                     </td>
-                    <td>@project.Description</td>
+                    <td>
+
+                        @project.Description
+                    </td>
+                    <td>
+                        @foreach (var projectSkill in project.ProjectSkills)
+                        {
+                            <a href="@Url.Action("Details", "Skills", new { id = projectSkill.Skill.Id })" title=@($"{projectSkill.Skill.Title} Details") data-bs-toggle="tooltip" data-bs-placement="top" style="text-decoration: none">
+                                <img src="@Url.Content(projectSkill.Skill.Icon)" alt=@($"{projectSkill.Skill.Title} Icon") class="rounded-circle" style="width: 48px; height: 48px; object-fit: cover;" />
+                            </a>
+                        }
+                    </td>
                     <td class="d-none d-lg-table-cell" style="width:150px; word-wrap: break-word;">
                         <a href=@project.RepositoryUrl title=@($"{project.Title} Repo")>
                             @project.RepositoryUrl
@@ -53,7 +65,7 @@
                     <td class="d-none d-lg-table-cell" style="white-space: nowrap;">@project.DateAdded.ToString("yyyy-MM-dd")</td>
                     <td>
                         <div class="d-grid gap-2">
-                            @if (@project.RepositoryUrl.Length > 0)
+                            @if (project?.RepositoryUrl != null)
                             {
                                 <a href=@project.RepositoryUrl class="btn btn-primary">Repo</a>
                             }
@@ -61,7 +73,7 @@
                             {
                                 @Html.ActionLink("Add Repo", "Edit", "Projects", new { id = project.Id }, new { @class = "btn btn-outline-primary" })
                             }
-                            @if (project.DeploymentUrl.Length > 0)
+                            @if (project?.DeploymentUrl != null)
                             {
                                 <a href=@project.DeploymentUrl class="btn btn-primary">Site</a>
                             }
