--- a/Views/Projects/List.cshtml
+++ b/Views/Projects/List.cshtml
@@ -65,7 +65,7 @@
                     <td class="d-none d-lg-table-cell" style="white-space: nowrap;">@project.DateAdded.ToString("yyyy-MM-dd")</td>
                     <td>
                         <div class="d-grid gap-2">
-                            @if (project?.RepositoryUrl != null)
+                            @if (project?.RepositoryUrl.IsEmpty() == false)
                             {
                                 <a href=@project.RepositoryUrl class="btn btn-primary">Repo</a>
                             }
@@ -73,7 +73,7 @@
                             {
                                 @Html.ActionLink("Add Repo", "Edit", "Projects", new { id = project.Id }, new { @class = "btn btn-outline-primary" })
                             }
-                            @if (project?.DeploymentUrl != null)
+                            @if (project?.DeploymentUrl.IsEmpty() == false)
                             {
                                 <a href=@project.DeploymentUrl class="btn btn-primary">Site</a>
                             }
