--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-/*    padding-top: 50px;
+    /*    padding-top: 50px;
     padding-bottom: 20px;*/
 }
 
@@ -25,3 +25,38 @@ textarea {
     max-width: 280px;
 }
 
+/*Project List View Overlapping Skill Icons*/
+.skill-avatars {
+    min-width: 150px;
+    /*border: 1px solid red;*/
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100px;
+    overflow: hidden;
+}
+
+.skill-avatar {
+    position: relative;
+    overflow: hidden;
+}
+
+.skill-avatar a img {
+    object-fit: scale-down;
+    border: 0px solid #fff;
+    border-radius: 50%;
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    padding: 4px;
+}
+
+.skill-avatar:not(:last-child) {
+    /*margin-left: -30px;*/
+}
+
+.skill-avatar img {
+    width: 100%;
+    display: block;
+}
